# Kayori_v2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  GOAL.md  LICENSE  README.md  app.py  docker-compose.yml  example.env  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  lint.yml
adapters/audio/: __init__.py  stt.py  tts.py
adapters/dispatcher/: ouput.py
adapters/input/: console_input.py  discord_input.py  telegram_input.py  webhook_input.py
adapters/memory/: episodic_memory.py  graph_memory.py
adapters/output/: console_output.py  discord_output.py  telegram_output.py  webhook_output.py
adapters/runtime/: __init__.py  discord_runtime.py  telegram_runtime.py  webhook_runtime.py
adapters/safty/: audit_logger.py
adapters/scheduler/: __init__.py  in_memory.py  redis.py
adapters/state/: __init__.py  in_memory.py  redis.py
agent/: __init__.py  react_agent.py  service.py
agent/chat/: __init__.py  graph.py  service.py
agent/life/: __init__.py  graph.py  service.py
agent/memory/: __init__.py  conversation_contraction.py  episodic_memory.py
agent/nodes/: call_model.py  finalize.py  postprocess.py  prepare_context.py
agent/orchestration/: __init__.py  mood_engine.py  orchestrator.py  outputsink.py
agent/prompts/: __init__.py  chat_template.py  memory_compaction_template.py  mood_classifier_template.py
config/: __init__.py  exceptions.py  logging.py  settings.py
core/: circuit_breaker.py  mood_engine.py  orchestrator.py  ouputsink.py  outputsink.py  task_scheduler.py
docs/: agent.md  architecture.md  conversation-contraction.md  episodic-memory.md  getting-started.md  index.md  mkdocs.yml  mood-engine.md  orchestrator.md  output-sink.md  scheduler.md  tools.md
docs/adapters/: backends.md  input.md  output.md  overview.md
docs/stylesheets/: extra.css
examples/: main.py
gateway/: __init__.py
gateway/audio/: __init__.py  stt.py
gateway/bus/: __init__.py  in_memory.py  redis_bus.py
gateway/http/: __init__.py  dashboard.py  logs.py  metrics.py
gateway/memory/: __init__.py  in_memory.py  pinecone.py  redis.py
gateway/scheduler/: __init__.py  in_memory.py  redis.py  service.py
gateway/state/: __init__.py  in_memory.py  redis.py
shared_types/: __init__.py  models.py  protocal.py  protocol.py  tool_schemas.py  types.py
src/: __init__.py
src/adapters/: __init__.py  webhook_common.py
src/agent/: __init__.py  react_agent.py  service.py
src/core/: __init__.py  circuit_breaker.py  conversation_contraction.py  episodic_memory.py  mood_engine.py  orchestrator.py  outputsink.py  scheduler.py  task_scheduler.py
src/dashboard/: app.js  index.html  styles.css
src/logger/: __init__.py  jsonl.py
src/shared_types/: __init__.py  helpers.py  models.py  protocol.py  thread_identity.py  types.py  (+1 more)
templates/: chat_template.py  episodic_strength_template.py  mood_classifier_template.py
tests/: run_tests.sh  smoke_imports.py  test_discord_voice_runtime.py
tools/: __init__.py  calendar.py  calender.py  gmail.py  life_info.py  reminder.py  schemas.py  spotify.py  todo_tool.py  user_device.py  weather.py  web_tools.py
(+87 files in other folders)
