[project]
name = "kayori-v2"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "geopy>=2.4.1",
    "google-auth-oauthlib>=1.3.0",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-google-community[calendar,gmail]>=3.0.5",
    "langchain-groq>=1.1.2",
    "langchain-neo4j>=0.8.0",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.10",
    "neo4j>=6.1.0",
    "pinecone>=8.1.0",
    "python-telegram-bot>=22.6",
    "python-multipart>=0.0.20",
    "pytz>=2026.1.post1",
    "redis>=7.3.0",
    "spotipy>=2.26.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src", "examples"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "ARG002", # unused method argument (common in protocols)
]
