[project]
name = "kayori-v2"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fastembed>=0.7.3",
    "geopy>=2.4.1",
    "google-auth-oauthlib>=1.3.0",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.0",
    "langchain-google-community[calendar,gmail]>=3.0.5",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.10",
    "pinecone>=8.1.0",
    "python-telegram-bot>=22.6",
    "python-multipart>=0.0.20",
    "pytz>=2026.1.post1",
    "redis>=7.3.0",
    "redisvl>=0.4.1",
    "spotipy>=2.26.0",
    "uvicorn>=0.35.0",
    "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
